appId: io.torvox
name: Modifier Keys Test
---
- launchApp
- waitForAnimationToEnd
- tapOn:
    id: Key_ESC
- tapOn:
    id: Key_CTRL
- tapOn:
    id: Key_ALT
- tapOn:
    id: Key_CTRL
- tapOn:
    id: Key_TAB
- tapOn:
    id: Key_ESC
